# BayAKM

./: .gitignore  CHANGELOG.md  LICENSE  README.md  bayakm.bat  bayakm_gui.bat  bayakm_gui_debug.bat  pyproject.toml
bayakm/data/: param_handler.py  parameters.yaml
bayakm/src/: campaign.py  dir_paths.py  output_handler.py  pi_handler.py
data/: param_handler.py  parameters.yaml  smiles_strings.yaml
docs/: help.yaml
src/: todo.py
src/bayakm/: add_numerical_frame.py  add_substance_frame.py  bayakm_campaign.py  campaign.py  campaign_plus.py  config_handler.py  config_loader.py  dir_paths.py  file_handler.py  full_campaign.py  gui.py  help.py  help_frame.py  import_handler.py  loop.py  main.py  main_frame.py  menu_frame.py  module.py  new_campaign_frame.py  new_campaign_tabview.py  optimization_loop.py  output.py  output_handler.py  param_handler.py  param_view_frame.py  parameters.py  pi_handler.py  probability_of_improvement.py  remove_parameter_frame.py  simulalte_results.py  simulate_results.py  smiles_loader.py  table_frame.py
src/data/: config.yaml  param_handler.py  parameters.yaml  remove_parameter_frame.py  smiles_strings.yaml
src/environment/: dir_paths.py
src/environment_variables/: dir_paths.py
src/gui/: add_numerical_frame.py  add_substance_frame.py  gui.py  gui_constants.py  help.py  insights_frame.py  loading_screen.py  menu_frame.py  new_campaign_tabview.py  new_numerical_frame.py  new_page_factory.py  new_substance_frame.py  param_view_frame.py  remove_parameter_frame.py  table_frame.py
src/logic/: output.py  (+5 more)
tests/: test_bayakm_campaign.py
(+54 files in other folders)
